regactor: Replaced System.x with SLF4J