@@ -12,7 +12,15 @@ import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.concurrent.Executors;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.net.URI;
+import java.net.URISyntaxException;
 public class Hitokoto {
+
+    private static final Logger log = LoggerFactory.getLogger(Hitokoto.class);
+    
     private static final ObjectMapper jsonMapper = new ObjectMapper();
     private static final String API_URL = "https://v1.hitokoto.cn/";
     private static final String[] KEYWORDS = {"一言", "yiyan", "hitokoto"};
@@ -24,7 +32,6 @@ public class Hitokoto {
         if (!json.has("group_id") || !json.has("raw_message")) return;
 
         long groupId = json.path("group_id").asLong();
-        long userId = json.path("user_id").asLong();
         String rawMessage = json.path("raw_message").asText().trim().toLowerCase();
 
         if (!GroupConfigManager.isFeatureEnabled(groupId, "one_text")) return;
@@ -39,7 +46,7 @@ public class Hitokoto {
 
     private static String fetchHitokoto() {
         try {
-            HttpURLConnection conn = (HttpURLConnection) new URL(API_URL).openConnection();
+            HttpURLConnection conn = (HttpURLConnection) new URI(API_URL).toURL().openConnection();
             conn.setRequestMethod("GET");
             conn.setRequestProperty("Accept", "application/json");
             conn.setConnectTimeout(5000);
@@ -58,11 +65,11 @@ public class Hitokoto {
                 result.append(" · ").append(fromWhoNode.asText());
             }
 
-            System.out.println("[INFO] 一言发送成功");
+            log.info("一言发送成功 => {}", result.toString());
             return result.toString();
         
         } catch (Exception ex) {
-            System.err.println("[ERROR] 一言获取异常: " + ex.getMessage());
+            log.warn("一言获取异常: {}", ex.getMessage());
             return "[一言获取失败] 接口异常。";
         }
     }
